--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,18 @@ __pycache__/
 # C extensions
 *.so
 
+#Bespoke Additions
+Libraries/**.csv
+Libraries/**.xlsx
+Libraries/**.xls
+*untitled*
+
+results/*.json
+results/*.csv
+results/*xlsx
+results/*xls
+results/*.catpart
+
 # Distribution / packaging
 .Python
 build/
