--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -4,8 +4,8 @@ commit = True
 tag = True
 
 [bumpversion:file:README.md]
-search = schema_version: {current_version}
-replace = schema_version: {new_version}
+search = current_version}
+replace = {new_version}
 
 
 [bumpversion:file:pyproject.toml]
