--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -4,7 +4,7 @@ commit = True
 tag = True
 
 [bumpversion:file:README.md]
-search = current_version}
+search = {current_version}
 replace = {new_version}
 
 
