--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -14,4 +14,4 @@ replace = version = "{new_version}"
 
 [bumpversion:file:docs\source\conf.py]
 search = {current_version}
-replace = new_version}
+replace = {new_version}
