--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -12,6 +12,6 @@ replace = {new_version}
 search = version = "{current_version}"
 replace = version = "{new_version}"
 
-[bumpversion:file:docs\source\conf.py]
+[bumpversion:file:docs/source/conf.py]
 search = {current_version}
 replace = {new_version}
