--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -14,3 +14,7 @@ replace = version = "{new_version}"
 [bumpversion:file:docs/source/conf.py]
 search = {current_version}
 replace = {new_version}
+
+[bumpversion:file:src/repTemp/workflows/use_and_delete.py]
+search = {current_version}
+replace = {new_version}
