--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -15,6 +15,6 @@ replace = version = "{new_version}"
 search = {current_version}
 replace = {new_version}
 
-[bumpversion:file:src/repTemp/workflows/use_and_delete.py]
+[bumpversion:file:use_and_delete.py]
 search = {current_version}
 replace = {new_version}
